# khm_light_api

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: __init__.py
app/core/: __init__.py  config.py  models.py
app/db/: __init__.py  database.py
app/logic/: __init__.py  parser.py  scraper.py
app/services/: outage_service.py
app/static/: index.html
tests/: __init__.py  conftest.py  test_api.py
